<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>TabNFe</class>
 <widget class="QWidget" name="TabNFe">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>874</width>
    <height>292</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <layout class="QGridLayout" name="gridLayout">
   <item row="0" column="0">
    <widget class="QTabWidget" name="tabWidgetNfe">
     <property name="currentIndex">
      <number>0</number>
     </property>
     <widget class="QWidget" name="tabEntrada">
      <attribute name="title">
       <string>Entrada</string>
      </attribute>
      <layout class="QGridLayout" name="gridLayout_44">
       <property name="leftMargin">
        <number>0</number>
       </property>
       <property name="topMargin">
        <number>0</number>
       </property>
       <property name="rightMargin">
        <number>0</number>
       </property>
       <property name="bottomMargin">
        <number>0</number>
       </property>
       <property name="spacing">
        <number>0</number>
       </property>
       <item row="0" column="0">
        <widget class="WidgetNfeEntrada" name="widgetEntrada" native="true"/>
       </item>
      </layout>
     </widget>
     <widget class="QWidget" name="tabSaida">
      <attribute name="title">
       <string>Saída</string>
      </attribute>
      <layout class="QGridLayout" name="gridLayout_45">
       <property name="leftMargin">
        <number>0</number>
       </property>
       <property name="topMargin">
        <number>0</number>
       </property>
       <property name="rightMargin">
        <number>0</number>
       </property>
       <property name="bottomMargin">
        <number>0</number>
       </property>
       <property name="spacing">
        <number>0</number>
       </property>
       <item row="0" column="0">
        <widget class="WidgetNfeSaida" name="widgetSaida" native="true"/>
       </item>
      </layout>
     </widget>
     <widget class="QWidget" name="tabDistribuicao">
      <attribute name="title">
       <string>Distribuição</string>
      </attribute>
      <layout class="QGridLayout" name="gridLayout_2">
       <property name="leftMargin">
        <number>0</number>
       </property>
       <property name="topMargin">
        <number>0</number>
       </property>
       <property name="rightMargin">
        <number>0</number>
       </property>
       <property name="bottomMargin">
        <number>0</number>
       </property>
       <property name="spacing">
        <number>0</number>
       </property>
       <item row="1" column="4">
        <widget class="WidgetNFeDistribuicao" name="widgetDistribuicao" native="true"/>
       </item>
      </layout>
     </widget>
    </widget>
   </item>
  </layout>
 </widget>
 <customwidgets>
  <customwidget>
   <class>WidgetNfeSaida</class>
   <extends>QWidget</extends>
   <header>src/widgetnfesaida.h</header>
   <container>1</container>
  </customwidget>
  <customwidget>
   <class>WidgetNfeEntrada</class>
   <extends>QWidget</extends>
   <header>src/widgetnfeentrada.h</header>
   <container>1</container>
  </customwidget>
  <customwidget>
   <class>WidgetNFeDistribuicao</class>
   <extends>QWidget</extends>
   <header>src/widgetnfedistribuicao.h</header>
   <container>1</container>
  </customwidget>
 </customwidgets>
 <resources/>
 <connections/>
</ui>
